fix: make project header static on small screens (#2049)
* fix: make project header static on small screens

* Fix UI of breadcrumb section

--- a/src/containers/DeveloperPortal/containers/DeveloperPortalProjects/containers/ProjectDetails/ProjectDetailsHeader/ProjectDetailsHeader.scss
+++ b/src/containers/DeveloperPortal/containers/DeveloperPortalProjects/containers/ProjectDetails/ProjectDetailsHeader/ProjectDetailsHeader.scss
@@ -14,6 +14,7 @@
 
   @media (max-width: 768px) {
     height: $details-header-height-768;
+    position: static;
   }
 
   &__github-button {
